# APReader

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  build.bat  pyproject.toml  requirements.txt  setup.py  upload.bat
.github/workflows/: python-publish.yml
apread/: __init__.py  apreader.py  binaryReader.py  channel.py  entries.py  loader.py  tools.py
apreader/: __init__.py  apreader.py  binaryReader.py  channel.py
docs/: CNAME  index.html
docs/apread/: binaryReader.html  channel.html  index.html
html/apread/: apreader.html
test/: 2byteJob1_2022_04_12_13_32_10.TST  4byteJob1_2022_04_12_13_31_47.TST  8byteJob1_2022_04_12_13_31_23.TST  catmanBinaryFormat.xls  testing.py
