[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dependencies = ["matplotlib", "opencv-python", "numpy", "tqdm"]
name = "apread"
version = "1.1.2"
authors = [
  { name="Leon Bohmann", email="mail@leonbohmann.de" },
]
description = "Import data from CatmanAP binary files."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/leonbohmann/APReader"
"Bug Tracker" = "https://github.com/leonbohmann/APReader/issues"